# string-splitter

./: .gitignore  README.md  bench_lorem.py  benchmarker.py  pyproject.toml
fixtures/: lorem.txt  lorem30.txt  lorem300.txt  lorem3000.txt
implementation/: cython_class.pyx  cython_generator.pyx  cython_generator2.pyx  cython_generator3.pyx  cython_generator4.pyx  python_native.py  python_np_mask.py  python_re.py
