[tool.poetry]
name = "string-splitter"
version = "0.1.0"
description = ""
authors = ["Ryan Tam <ryantam626@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
scalene = "^1.5.21"
cython = "^0.29.34"
numpy = "^1.24.2"
requests = "^2.28.2"
ipython = "^8.12.0"
click = "^8.1.3"
rich = "^13.3.4"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
